crates/solidity/testing/snapshots/bindings_output/contracts/diamond/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[input.sol:7:35]
   │
 7 │ ╭─▶     function foo() public virtual override {
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:15:35]
    │
 15 │ ╭─▶     function foo() public virtual override {
    ┆ ┆   
 17 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract A {
    │          ┬  
    │          ╰── name: 1
  2 │     function foo() public virtual {
    │              ─┬─          ───┬───  
    │               ╰──────────────────── name: 2
    │                              │     
    │                              ╰───── unresolved
    │ 
  6 │ contract B is A {
    │          ┬    ┬  
    │          ╰─────── name: 3
    │               │  
    │               ╰── ref: 1
  7 │     function foo() public virtual override {
    │              ─┬─          ───┬───  
    │               ╰──────────────────── name: 4
    │                              │     
    │                              ╰───── unresolved
    │ 
 11 │ contract C is A {
    │          ┬    ┬  
    │          ╰─────── name: 5
    │               │  
    │               ╰── ref: 1
    │ 
 14 │ contract D is B, C {
    │          ┬    ┬  ┬  
    │          ╰────────── name: 6
    │               │  │  
    │               ╰───── ref: 3
    │                  │  
    │                  ╰── ref: 5
 15 │     function foo() public virtual override {
    │              ─┬─          ───┬───  
    │               ╰──────────────────── name: 7
    │                              │     
    │                              ╰───── unresolved
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │     ╭─│ ──▶ contract A {
  2 │     │ ╭───▶     function foo() public virtual {
  3 │     │ ├───▶     }
    │     │ │             
    │     │ ╰───────────── definiens: 2
  4 │   │ ├─────▶ }
    │   │ │           
    │   │ ╰─────────── definiens: 1
  5 │   ╭───────▶ 
    ┆   ┆         
  7 │   │             function foo() public virtual override {
    │   │         ────────────────┬────────────────  
    │   │                         ╰────────────────── definiens: 4
    ┆   ┆         
  9 │   ├─────│ ▶ }
    │   │     │       
    │   ╰───────────── definiens: 3
 10 │         ╭─▶ 
    ┆         ┆   
 12 │ │       ├─▶ }
    │ │       │       
    │ │       ╰─────── definiens: 5
 13 │ ╭─────────▶ 
    ┆ ┆           
 15 │ │               function foo() public virtual override {
    │ │           ────────────────┬────────────────  
    │ │                           ╰────────────────── definiens: 7
    ┆ ┆           
 18 │ ├─────────▶ }
    │ │               
    │ ╰─────────────── definiens: 6
────╯
